
name:                ethereum-util
version:             0.1.0.0
license-file:        LICENSE
author:              jamshid
maintainer:          j
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Blockchain.Colors
                     , Blockchain.ExtWord
                     , Blockchain.Format
                     , Blockchain.MiscJSON
                     , Blockchain.SHA
                     , Blockchain.Util
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , binary
                     , bytestring
                     , cryptohash
                     , ethereum-rlp
                     , haskoin
                     , nibblestring
                     , text
                     , ansi-wl-pprint
  hs-source-dirs:      src
  default-language:    Haskell2010